# Marry4

./: README.md
Marry4/: README.md  pyproject - 副本.toml  pyproject.toml
Marry4/MarrySub/: README.md  pyproject.toml
Marry4/MarrySub/src/plugins/: tea_sub.py
Marry4/MarrySub/tea/: A1.json  A2.json  friend_list.json
Marry4/MarrySub/tea/group/: 555679990.json  606731240.json  669546286.json  766536274.json  807879174.json  _group.json
Marry4/src/plugins/tea_memory/: A.py  B.py  C.py  D.py  E.py  W.py  X.py  Z.py  __init__.py  _test.py  代码.txt  编程.txt
tea_data/: A1.json  B1.json  B2.json  tea_data
tea_memory/: A.py  B.py  C.py  D.py  E.py  SPACE OUT  V.py  W.py  X.py  Y.py  Z.py  __init__.py
tea_sub/: tea_sub.py
