[project]
name = "Marry4"
version = "0.1.0"
description = "Marry4"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_picstatus"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
